@@ -23,6 +23,16 @@ name|java
 operator|.
 name|net
 operator|.
+name|URISyntaxException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
 name|URL
 import|;
 end_import
@@ -60,6 +70,18 @@ operator|.
 name|file
 operator|.
 name|Paths
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|CayenneRuntimeException
 import|;
 end_import
 
@@ -1158,17 +1180,38 @@ argument_list|()
 decl_stmt|;
 name|Path
 name|resourcePath
-init|=
+decl_stmt|;
+try|try
+block|{
+name|resourcePath
+operator|=
 name|Paths
 operator|.
 name|get
 argument_list|(
 name|url
 operator|.
-name|getPath
+name|toURI
 argument_list|()
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|URISyntaxException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|CayenneRuntimeException
+argument_list|(
+literal|"Unable to read cgen path"
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
 if|if
 condition|(
 name|Files
