@@ -25,6 +25,18 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|CayenneRuntimeException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|configuration
 operator|.
 name|xml
@@ -74,6 +86,16 @@ operator|.
 name|extension
 operator|.
 name|BaseSaverDelegate
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|URISyntaxException
 import|;
 end_import
 
@@ -248,17 +270,38 @@ condition|)
 block|{
 name|Path
 name|resourcePath
-init|=
+decl_stmt|;
+try|try
+block|{
+name|resourcePath
+operator|=
 name|Paths
 operator|.
 name|get
 argument_list|(
 name|url
 operator|.
-name|getPath
+name|toURI
 argument_list|()
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|URISyntaxException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|CayenneRuntimeException
+argument_list|(
+literal|"Unable to resolve output path"
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
 if|if
 condition|(
 name|Files
